--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=testProgJava
 spring.web.resources.static-locations=classpath:/static/
 server.port=80
 
-#PostgreSQL
+#SQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/testProgJava
 spring.datasource.username=postgres
 spring.datasource.password=12345
